--- a/roadmap/src/roadmap/config/tasks.yaml
+++ b/roadmap/src/roadmap/config/tasks.yaml
@@ -1,17 +1,28 @@
-research_task:
+job_analysis:
   description: >
-    Conduct a thorough research about {topic}
-    Make sure you find any interesting and relevant information given
-    the current year is {current_year}.
-  expected_output: >
-    A list with 10 bullet points of the most relevant information about {topic}
-  agent: researcher
+    Analyze the following job description:
+    {job_description}
 
-reporting_task:
+    Extract:
+    - Required skills
+    - Nice-to-have skills
+    - Seniority level
+    - Interview focus areas
+  expected_output: Structured job requirements
+  agent: job_agent
+
+company_analysis:
   description: >
-    Review the context you got and expand each topic into a full section for a report.
-    Make sure the report is detailed and contains any and all relevant information.
-  expected_output: >
-    A fully fledged report with the main topics, each with a full section of information.
-    Formatted as markdown without '```'
-  agent: reporting_analyst
+    Research the company named {company_name}.
+    Find:
+    - Overview
+    - Likely tech stack
+  expected_output: Company overview and tech stack
+  agent: company_agent
+
+roadmap_creation:
+  description: >
+    Using the job requirements and company research,
+    create a 2-week study roadmap tailored to the role with resources.
+  expected_output: Week-wise study roadmap
+  agent: roadmap_agent
