--- a/roadmap/pyproject.toml
+++ b/roadmap/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
 name = "roadmap"
 version = "0.1.0"
-description = "roadmap using crewAI"
-authors = [{ name = "Your Name", email = "you@example.com" }]
+description = "An agentic AI system for your customized tech roadmap for job roles using crewAI"
+authors = [{ name = "Shreya Shrivastava", email = "shreya2202shri@gmail.com" }]
 requires-python = ">=3.10,<3.14"
 dependencies = [
-    "crewai[tools]==1.7.2"
+    "crewai[google-genai,tools]==1.7.2",
 ]
 
 [project.scripts]
