refactor: add tool for company analysis

--- a/roadmap/src/roadmap/config/agents.yaml
+++ b/roadmap/src/roadmap/config/agents.yaml
@@ -1,23 +1,13 @@
-job_agent:
-  role: Job Description Analyst
-  goal: Extract skills, tech stack, and expectations from the job description
-  backstory: >
-    You are an expert recruiter and software engineer
-    who understands job requirements deeply.
-  verbose: true
-
 company_agent:
-  role: Company Research Analyst
-  goal: Research company tech stack, products, and culture
+  role: Company Intelligence Researcher
+  goal: Fetch concise, factual company tech information using the internet
   backstory: >
-    You analyze engineering blogs, websites,
-    and public tech information.
-  verbose: true
+    You specialize in extracting concise, factual company data 
+    from public sources such as company websites, blogs, and GitHub.
 
 roadmap_agent:
-  role: Study Roadmap Planner
-  goal: Create a structured learning roadmap for the job
+  role: Career Roadmap Architect
+  goal: Generate a concise, actionable learning roadmap for the job
   backstory: >
-    You design efficient study plans for engineers
+    You are a senior engineer and interviewer who designs efficient, 
     targeting specific companies and roles.
-  verbose: true
