fix: task output prompt and temp

--- a/roadmap/src/roadmap/config/tasks.yaml
+++ b/roadmap/src/roadmap/config/tasks.yaml
@@ -54,4 +54,4 @@ roadmap_creation:
     - Practical + interview-focused
     - No explanations or filler
   expected_output: >
-    A clean, structured 2-week study roadmap
+    A clean, structured 2-week study roadmap in the given output format
